# principal

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  PROOF_OF_CONCEPT.md  README.md  SECURITY.md  TECHNICAL_SPECIFICATION.md
contracts/oracle_adapter/: Cargo.toml
contracts/oracle_adapter/src/: lib.rs
contracts/oracle_adapter/test_snapshots/test/: admin_transfer.1.json  initialize_and_set_price.1.json  invalid_price_rejected.1.json  is_fresh_at_exact_boundary.1.json  is_fresh_false_before_any_price_set.1.json  is_fresh_false_when_stale.1.json  is_fresh_within_staleness_window.1.json  stale_timestamp_rejected.1.json  unauthorized_price_update_panics.1.json
contracts/permissioning/: Cargo.toml
contracts/permissioning/src/: lib.rs
contracts/permissioning/test_snapshots/test/: batch_grant_accounts.1.json  grant_and_check_account.1.json  grant_and_revoke_asset.1.json  (+2 more)
contracts/principal_manager/: Cargo.toml
contracts/principal_manager/src/: lib.rs
contracts/principal_manager/test_snapshots/test/: admin_transfer.1.json  mint_after_maturity_panics.1.json  mint_before_maturity.1.json  oracle_stale_blocks_redeem.1.json  redeem_before_maturity_panics.1.json  redeem_pt_correct_formula.1.json  redeem_yt_correct_formula_with_yield.1.json  redeem_yt_zero_when_no_yield.1.json  total_supply_decrements_after_redeem.1.json  total_supply_tracks_mints.1.json  unpermissioned_user_cannot_mint.1.json
contracts/risk_control/: Cargo.toml
contracts/risk_control/src/: lib.rs
contracts/sy_wrapper/: Cargo.toml
contracts/sy_wrapper/src/: lib.rs
(+21 files in other folders)
